fix: mobile login screen bugs The pin entry was very annoying on mobile until the inputmode was correctly set, making pin-entry a breeze: then the positioning of the login elements was completely borked due to animation anchoring, so I've solved that by animating individual elements rather than the entire container.

--- a/src/styles.css
+++ b/src/styles.css
@@ -161,7 +161,6 @@ body {
 
 @keyframes Intro {
   0% { opacity: 0; transform: translateY(50px); }
-  100% { opacity: inherit; transform: translateY(0px); }
 }
 
 .intro-anim-widen {
